Diseño de animacion de botones agregado a IFM

--- a/IFM.html
+++ b/IFM.html
@@ -52,7 +52,7 @@
     <section></section>
     <main>
       <div id="contain-1">
-        <img src="assets/images/balon2.jpg" alt="image" />
+        <img src="assets/images/balon2.jpg" alt="image" id="fondo"/>
         <div class="contain-text">
           <h1>Innovative Football Management (IFM)</h1>
           <br />
@@ -71,6 +71,44 @@
             cada atleta alcance su máximo potencial tanto dentro como fuera del
             campo.
           </p>
+        </div>
+        <div class="contain-service">
+          <div class="button-container" id="services-1">
+            <button>
+              <img src="assets/svg/add_circle.svg" alt="services" />
+            </button>
+            <div id="content-service-1" class="content">
+              <h1>Servicio 1</h1>
+              <p>Descripción del Servicio 1</p>
+            </div>
+          </div>
+          <div class="button-container" id="services-2">
+            <button>
+              <img src="assets/svg/add_circle.svg" alt="services" />
+            </button>
+            <div id="content-service-2" class="content">
+              <h1>Servicio 2</h1>
+              <p>Descripción del Servicio 2</p>
+            </div>
+          </div>
+          <div class="button-container" id="services-3">
+            <button>
+              <img src="assets/svg/add_circle.svg" alt="services" />
+            </button>
+            <div id="content-service-3" class="content">
+              <h1>Servicio 3</h1>
+              <p>Descripción del Servicio 3</p>
+            </div>
+          </div>
+          <div class="button-container" id="services-4">
+            <button>
+              <img src="assets/svg/add_circle.svg" alt="services" />
+            </button>
+            <div id="content-service-4" class="content">
+              <h1>Servicio 4</h1>
+              <p>Descripción del Servicio 4</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
