--- a/olimpia.html
+++ b/olimpia.html
@@ -104,7 +104,7 @@
       </div>
     </main>
 
-    <script src="js/cards_service.js"></script>
+    <!-- <script src="js/cards_service.js"></script> -->
 
     <article>
       <div class="titulo"></div>
