--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
         <img src="assets/images/inicio3.png" alt="imagen1" />
         <img src="assets/images/inicio4.jpg" alt="imagen2" />
       </div>
+      <div class="image-contain" id="image-contain-2">
+        <img src="assets/images/inicio1.jpg" alt="imagen1" />
+        <img src="assets/images/inicio2.jpg" alt="imagen2" />
+      </div>
+      <div class="image-contain" id="image-contain-3">
+        <img src="assets/images/inicio3.png" alt="imagen1" />
+        <img src="assets/images/inicio4.jpg" alt="imagen2" />
+      </div>
 
       <button id="position-left" data-en="INTRODUCTION" data-es="INTRODUCCION">
         INTRODUCCION
