Diseño inicial con imagenes en movimiento finalizado

--- a/index.html
+++ b/index.html
@@ -18,9 +18,22 @@
     </div>
 
     <main>
-      <div class="image-contain">
+      <!-- <div class="image-contain">
         <img src="assets/images/instagram1.jpeg" alt="imagen1" />
         <img src="assets/images/instagram2.jpg" alt="imagen2" />
+      </div> -->
+
+      <div class="image-contain" id="image-contain-1">
+        <img src="assets/images/instagram1.jpeg" alt="imagen1" />
+        <img src="assets/images/instagram2.jpg" alt="imagen2" />
+      </div>
+      <div class="image-contain" id="image-contain-2">
+        <img src="assets/images/inicio1.jpg" alt="imagen1" />
+        <img src="assets/images/inicio2.jpg" alt="imagen2" />
+      </div>
+      <div class="image-contain" id="image-contain-3">
+        <img src="assets/images/inicio3.png" alt="imagen1" />
+        <img src="assets/images/inicio4.jpg" alt="imagen2" />
       </div>
 
       <button id="position-left" data-en="INTRODUCTION" data-es="INTRODUCCION">
@@ -154,6 +167,7 @@
         </div>
       </div>
     </main>
+    <script src="js/flash_img.js"></script>
   </body>
 </html>
 
