Responsive SOLO al index (inicio de la pagina)

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index/1920x1080/responsive.css">
-    <link rel="stylesheet" href="css/index/1366x768/responsive.css">
-    <link rel="stylesheet" href="css/index/720x1600/responsive.css">
+    <link rel="stylesheet" href="css/index/1920x1080/responsive.css" />
+    <link rel="stylesheet" href="css/index/1366x768/responsive.css" />
+    <link rel="stylesheet" href="css/index/720x1600/responsive.css" />
+    <!-- <link rel="stylesheet" href="css/index/general.css" /> -->
+    <link rel="stylesheet" href="css/index/normalize.css" />
     <link rel="icon" href="assets/icons/innovatefavicon.ico" />
     <title>Innovative</title>
   </head>
   <body>
-    <div class="button_language" style="padding-right: 20px">
-      <button id="languageToggle">English</button>
-      <script src="js/change_language.js"></script>
-    </div>
-
     <main>
+      <div class="button_language" style="padding-right: 20px">
+        <button id="languageToggle">English</button>
+        <script src="js/change_language.js"></script>
+      </div>
 
       <div class="image-contain" id="image-contain-1">
         <img src="assets/images/instagram1.jpeg" alt="imagen1" />
@@ -40,11 +41,7 @@
       <div id="overlay" class="hidden"></div>
 
       <div id="sidePanel" class="hidden">
-        <h1
-          style="color: #1f4e79"
-          data-en="About Us"
-          data-es="Acerca de Nosotros"
-        >
+        <h1 data-en="About Us" data-es="Acerca de Nosotros">
           Acerca de Nosotros
         </h1>
         <br />
@@ -64,9 +61,7 @@
       </div>
 
       <div id="sidePanel2" class="hidden">
-        <h1 style="color: #1f4e79" data-en="Objectives" data-es="Objetivos">
-          Objetivos
-        </h1>
+        <h1 data-en="Objectives" data-es="Objetivos">Objetivos</h1>
         <br />
         <p
           data-en="Innovative Group is dedicated to providing innovative solutions in sports, entertainment, culture and business. sports, entertainment, culture and business. Our mission is to to support and enhance our clients' careers through customized services and personalized services and operational excellence."
@@ -79,9 +74,7 @@
         </p>
 
         <br /><br />
-        <h2 style="color: #255784" data-en="Vision" data-es="Visión:">
-          Visión:
-        </h2>
+        <h2 data-en="Vision" data-es="Visión:">Visión:</h2>
         <p
           data-en="To be leaders in integrated talent management, sports/entertainment entertainment and innovative marketing strategies."
           data-es="Ser líderes en la gestión integral de talentos deportivos/entretenimiento y estrategias de marketing innovadoras."
@@ -91,9 +84,7 @@
         </p>
 
         <br /><br />
-        <h2 style="color: #255784" data-en="Mission" data-es="Misión:">
-          Misión:
-        </h2>
+        <h2 data-en="Mission" data-es="Misión:">Misión:</h2>
         <p
           data-en="To support our clients at every stage of their careers with innovative and customized solutions. innovative and customized solutions."
           data-es="Apoyar a nuestros clientes en cada etapa de su carrera con soluciones innovadoras y personalizadas."
@@ -103,9 +94,7 @@
         </p>
 
         <br /><br />
-        <h2 style="color: #255784" data-en="Values" data-es="Valores:">
-          Valores:
-        </h2>
+        <h2 data-en="Values" data-es="Valores:">Valores:</h2>
         <p
           data-en="Innovation, Professionalism, Integrity, Commitment."
           data-es="Innovación, Profesionalismo, Integridad, Compromiso."
