--- a/innov8.html
+++ b/innov8.html
@@ -185,6 +185,10 @@
             <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
             <h2>Ciudad de mexico</h2>
           </div>
+          <div class="content-img">
+            <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
+            <h2>Ciudad de mexico</h2>
+          </div>
         </div>
       </article>
 
