Se agrego ciudad de mexico en la seccion de contacto y ubicacion

--- a/IFM.html
+++ b/IFM.html
@@ -206,7 +206,7 @@
         </div>
         <div class="ubi">
           <div class="content-img">
-            <img src="assets/images/medellin.jpg" alt="img-ubi" id="colombia" />
+            <img src="assets/images/colombia.jpg" alt="img-ubi" id="colombia" />
             <h2>Medellin</h2>
           </div>
           <div class="content-img">
@@ -216,6 +216,10 @@
           <div class="content-img">
             <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
             <h2>Miami</h2>
+          </div>
+          <div class="content-img">
+            <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
+            <h2>Ciudad de mexico</h2>
           </div>
         </div>
       </div>
