--- a/innov8.html
+++ b/innov8.html
@@ -96,6 +96,10 @@
             <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
             <h2>Miami</h2>
           </div>
+          <div class="content-img">
+            <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
+            <h2>Ciudad de mexico</h2>
+          </div>
         </div>
       </div>
     </article>
