--- a/olimpia.html
+++ b/olimpia.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/olimpia/1920x1080/responsive.css">
-    <link rel="stylesheet" href="css/olimpia/1366x768/responsive.css">
-    <link rel="stylesheet" href="css/olimpia/720x1600/responsive.css">
+    <link rel="stylesheet" href="css/olimpia/1920x1080/responsive.css" />
+    <link rel="stylesheet" href="css/olimpia/1366x768/responsive.css" />
+    <link rel="stylesheet" href="css/olimpia/720x1600/responsive.css" />
     <link rel="icon" href="assets/icons/olimpiafavicon.ico" />
     <script src="js/scroll.js"></script>
     <title>C.D. Olimpia</title>
@@ -126,6 +126,10 @@
           <div class="content-img">
             <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
             <h2>Miami</h2>
+          </div>
+          <div class="content-img">
+            <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
+            <h2>Ciudad de mexico</h2>
           </div>
         </div>
       </div>
