Se agrego ciudad de mexico en la seccion de contacto y ubicacion

--- a/innov8.html
+++ b/innov8.html
@@ -142,6 +142,10 @@
               <h2>Ciudad de mexico</h2>
             </div>
           </div>
+          <div class="content-img">
+            <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
+            <h2>Ciudad de mexico</h2>
+          </div>
         </div>
       </article>
 
