Modificacion completa en los archivos de diseño de Innovate

--- a/IFM.html
+++ b/IFM.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/IFM/1920x1080/responsive.css">
-    <link rel="stylesheet" href="css/IFM/1366x768/responsive.css">
-    <link rel="stylesheet" href="css/IFM/720x1600/responsive.css">
+    <link rel="stylesheet" href="css/IFM/1920x1080/responsive.css" />
+    <link rel="stylesheet" href="css/IFM/1366x768/responsive.css" />
+    <link rel="stylesheet" href="css/IFM/720x1600/responsive.css" />
+    <link rel="stylesheet" href="css/IFM/general.css">
+    <link rel="stylesheet" href="css/IFM/normalize.css">
     <link rel="icon" href="assets/icons/ifmfavicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
@@ -13,6 +15,7 @@
     <title>Innovative Football Management</title>
   </head>
   <body>
+    <div id="normalize">
     <nav id="navbar">
       <div class="logo">
         <img src="assets/icons/escudo.png" alt="logoExample" />
@@ -46,7 +49,7 @@
     <section></section>
     <main>
       <div id="contain-1">
-        <img src="assets/images/balon2.jpg" alt="image" id="fondo"/>
+        <img src="assets/images/balon2.jpg" alt="image" id="fondo" />
         <div class="contain-text">
           <h1>Innovative Football Management (IFM)</h1>
           <br />
@@ -248,5 +251,6 @@
         <img src="assets/svg/arrow_upward.svg" alt="Volver" />
       </button>
     </div>
+  </div>
   </body>
 </html>
