--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/index/1366x768/responsive.css" />
     <link rel="stylesheet" href="css/index/720x1600/responsive.css" />
     <!-- <link rel="stylesheet" href="css/index/general.css" /> -->
+    <link rel="stylesheet" href="css/index/general.css" />
+    <link rel="stylesheet" href="css/index/lenguage.css" />
+    <link rel="stylesheet" href="css/index/main.css" />
     <link rel="stylesheet" href="css/index/normalize.css" />
     <link rel="icon" href="assets/icons/innovatefavicon.ico" />
     <title>Innovative</title>
