--- a/innov8.html
+++ b/innov8.html
@@ -3,129 +3,170 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/innov8/1920x1080/responsive.css">
-    <link rel="stylesheet" href="css/innov8/1366x768/responsive.css">
-    <link rel="stylesheet" href="css/innov8/720x1600/responsive.css">
+    <link rel="stylesheet" href="css/innov8/1920x1080/responsive.css" />
+    <link rel="stylesheet" href="css/innov8/1366x768/responsive.css" />
+    <link rel="stylesheet" href="css/innov8/720x1600/responsive.css" />
+    <!-- --------------------------------------------------------- -->
+     <link rel="stylesheet" href="css/innov8/general.css">
     <link rel="icon" href="assets/icons/innov8favicon.ico" />
     <script src="js/scroll.js"></script>
     <title>Innov8</title>
   </head>
   <body>
-    <div class="back">
-      <a href="index.html"
-        ><img src="assets/svg/arrow_back.svg" alt="Back"
-      /></a>
-    </div>
-
-    <nav id="navbar">
-      <div class="logo">
-        <img src="assets/icons/innov8logorb.png" alt="logoExample" />
-      </div>
-      <div class="botones">
-        <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
-        <a href="#our-services" data-en="Company" data-es="Compañia"
-          >Compañia</a
-        >
-        <a href="#contact" data-en="Contact" data-es="Contacto">Contacto</a>
-      </div>
-      <div class="button_language" style="padding-right: 20px">
-        <button id="languageToggle">English</button>
-        <script src="js/change_language.js"></script>
-      </div>
-    </nav>
-
-    <header id="volver">
-      <div class="static-image">
-        <img src="assets/images/marketing1.jpg" alt="" />
-      </div>
-      <img src="assets/icons/innov8logorb.png" alt="Logo Principal" />
-    </header>
-
-    <section></section>
-    <main>
-      <div id="contain-1">
-        <img src="assets/images/marketing2.jpg" alt="image" />
-        <div class="contain-text">
-          <h1>Innov8 Marketing & Management</h1>
-          <br />
-          <p
-            data-en="Innov8 Marketing & Management specializes in brand development, strategic partnerships and creative management. development, strategic partnerships and creative management. Our mission is to is to transform ideas into successful realities through innovative and customized solutions. innovative and customized solutions. With a holistic approach, we offer services ranging from the creation of a strong brand identity to the implementation of marketing from the creation of a strong brand identity to the implementation of effective marketing strategies and the management of commercial alliances that enhance our clients' growth. our clients' growth. At Innov8, we are committed to to delivering exceptional results through close collaboration and limitless creativity."
-            data-es="Innov8 Marketing & Management se especializa en el desarrollo de marca, asociaciones estratégicas y gestión creativa. Nuestra misión es transformar las ideas en realidades exitosas a través de soluciones innovadoras y personalizadas. Con un enfoque integral, ofrecemos servicios que abarcan desde la creación de una identidad de marca sólida hasta la implementación de estrategias de marketing efectivas y la gestión de alianzas comerciales que potencian el crecimiento de nuestros clientes. En Innov8, nos comprometemos a brindar resultados excepcionales mediante una colaboración cercana y una creatividad sin límites."
+    <div class="contain-father">
+      <nav id="navbar">
+        <div class="logo">
+          <img src="assets/icons/innov8logorb.png" alt="logoExample" />
+        </div>
+        <div class="botones">
+          <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
+          <a href="#our-services" data-en="Company" data-es="Compañia"
+            >Compañia</a
           >
-            Innov8 Marketing & Management se especializa en el desarrollo de
-            marca, asociaciones estratégicas y gestión creativa. Nuestra misión
-            es transformar las ideas en realidades exitosas a través de
-            soluciones innovadoras y personalizadas. Con un enfoque integral,
-            ofrecemos servicios que abarcan desde la creación de una identidad
-            de marca sólida hasta la implementación de estrategias de marketing
-            efectivas y la gestión de alianzas comerciales que potencian el
-            crecimiento de nuestros clientes. En Innov8, nos comprometemos a
-            brindar resultados excepcionales mediante una colaboración cercana y
-            una creatividad sin límites.
+          <a href="#contact" data-en="Contact" data-es="Contacto">Contacto</a>
+        </div>
+        <div class="button_language" style="padding-right: 20px">
+          <button id="languageToggle">English</button>
+          <script src="js/change_language.js"></script>
+        </div>
+      </nav>
+
+      <header id="volver">
+        <div class="static-image">
+          <img src="assets/images/marketing1.jpg" alt="" />
+        </div>
+        <img src="assets/icons/innov8logorb.png" alt="Logo Principal" id="logo"/>
+      </header>
+
+      <section></section>
+      <main>
+        <div id="contain-1">
+          <img src="assets/images/marketing2.jpg" alt="image" id="fondo" />
+          <div class="contain-text">
+            <h1>Innov8 Marketing & Management</h1>
+            <br />
+            <p
+              data-en="Innov8 Marketing & Management specializes in brand development, strategic partnerships and creative management. development, strategic partnerships and creative management. Our mission is to is to transform ideas into successful realities through innovative and customized solutions. innovative and customized solutions. With a holistic approach, we offer services ranging from the creation of a strong brand identity to the implementation of marketing from the creation of a strong brand identity to the implementation of effective marketing strategies and the management of commercial alliances that enhance our clients' growth. our clients' growth. At Innov8, we are committed to to delivering exceptional results through close collaboration and limitless creativity."
+              data-es="Innov8 Marketing & Management se especializa en el desarrollo de marca, asociaciones estratégicas y gestión creativa. Nuestra misión es transformar las ideas en realidades exitosas a través de soluciones innovadoras y personalizadas. Con un enfoque integral, ofrecemos servicios que abarcan desde la creación de una identidad de marca sólida hasta la implementación de estrategias de marketing efectivas y la gestión de alianzas comerciales que potencian el crecimiento de nuestros clientes. En Innov8, nos comprometemos a brindar resultados excepcionales mediante una colaboración cercana y una creatividad sin límites."
+            >
+              Innov8 Marketing & Management se especializa en el desarrollo de
+              marca, asociaciones estratégicas y gestión creativa. Nuestra
+              misión es transformar las ideas en realidades exitosas a través de
+              soluciones innovadoras y personalizadas. Con un enfoque integral,
+              ofrecemos servicios que abarcan desde la creación de una identidad
+              de marca sólida hasta la implementación de estrategias de
+              marketing efectivas y la gestión de alianzas comerciales que
+              potencian el crecimiento de nuestros clientes. En Innov8, nos
+              comprometemos a brindar resultados excepcionales mediante una
+              colaboración cercana y una creatividad sin límites.
+            </p>
+          </div>
+          <div class="contain-service">
+            <div class="button-container" id="services-1">
+              <button>
+                <img src="assets/svg/add_circle.svg" alt="services" />
+              </button>
+              <div id="content-service-1" class="content">
+                <h1>Servicio 1</h1>
+                <p>Descripción del Servicio 1</p>
+              </div>
+            </div>
+            <div class="button-container" id="services-2">
+              <button>
+                <img src="assets/svg/add_circle.svg" alt="services" />
+              </button>
+              <div id="content-service-2" class="content">
+                <h1>Servicio 2</h1>
+                <p>Descripción del Servicio 2</p>
+              </div>
+            </div>
+            <div class="button-container" id="services-3">
+              <button>
+                <img src="assets/svg/add_circle.svg" alt="services" />
+              </button>
+              <div id="content-service-3" class="content">
+                <h1>Servicio 3</h1>
+                <p>Descripción del Servicio 3</p>
+              </div>
+            </div>
+            <div class="button-container" id="services-4">
+              <button>
+                <img src="assets/svg/add_circle.svg" alt="services" />
+              </button>
+              <div id="content-service-4" class="content">
+                <h1>Servicio 4</h1>
+                <p>Descripción del Servicio 4</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <article>
+        <div class="content-contact">
+          <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
+          <br />
+          <p>
+            <img src="assets/svg/mail.svg" alt="email" />
+            info@innovativegroup.com
+          </p>
+          <br />
+          <p>
+            <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
           </p>
         </div>
-      </div>
-    </main>
-
-    <article>
-      <div class="content-contact">
-        <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
-        <br />
-        <p>
-          <img src="assets/svg/mail.svg" alt="email" /> info@innovativegroup.com
-        </p>
-        <br />
-        <p>
-          <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
-        </p>
-      </div>
-      <div class="content-ubi">
-        <div class="title">
-          <h1 data-en="LOCATIONS" data-es="UBICACIONES">UBICACIONES</h1>
-        </div>
-        <div class="ubi">
-          <div class="content-img">
-            <img src="assets/images/medellin.jpg" alt="img-ubi" id="colombia" />
-            <h2>Medellin</h2>
+        <div class="content-ubi">
+          <div class="title">
+            <h1 data-en="LOCATIONS" data-es="UBICACIONES">UBICACIONES</h1>
           </div>
-          <div class="content-img">
-            <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
-            <h2>Dallas</h2>
-          </div>
-          <div class="content-img">
-            <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
-            <h2>Miami</h2>
-          </div>
-          <div class="content-img">
-            <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
-            <h2>Ciudad de mexico</h2>
+          <div class="ubi">
+            <div class="content-img">
+              <img
+                src="assets/images/medellin.jpg"
+                alt="img-ubi"
+                id="colombia"
+              />
+              <h2>Medellin</h2>
+            </div>
+            <div class="content-img">
+              <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
+              <h2>Dallas</h2>
+            </div>
+            <div class="content-img">
+              <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
+              <h2>Miami</h2>
+            </div>
+            <div class="content-img">
+              <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
+              <h2>Ciudad de mexico</h2>
+            </div>
           </div>
         </div>
-      </div>
-    </article>
+      </article>
 
-    <footer>
-      <div class="contain">
-        &copy; Innovative Football Management. All rights reserved.
+      <footer>
+        <div class="contain">
+          &copy; Innovative Football Management. All rights reserved.
+        </div>
+        <div id="redes">
+          <a href="instagram.com"
+            ><img src="assets/icons/instagram2.png" alt="Instagram"
+          /></a>
+          <a href="facebook.com"
+            ><img src="assets/icons/linkedin2.png" alt="Facebook"
+          /></a>
+          <a href="whatsapp.com"
+            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
+          /></a>
+        </div>
+      </footer>
+      <div class="back">
+        <button
+          onclick="document.getElementById('volver').scrollIntoView({ behavior: 'smooth' });"
+        >
+          <img src="assets/svg/arrow_upward.svg" alt="Volver" />
+        </button>
       </div>
-      <div id="redes">
-        <a href="instagram.com"
-          ><img src="assets/icons/instagram2.png" alt="Instagram"
-        /></a>
-        <a href="facebook.com"
-          ><img src="assets/icons/linkedin2.png" alt="Facebook"
-        /></a>
-        <a href="whatsapp.com"
-          ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
-        /></a>
-      </div>
-    </footer>
-    <div class="back">
-      <button
-        onclick="document.getElementById('volver').scrollIntoView({ behavior: 'smooth' });"
-      >
-        <img src="assets/svg/arrow_upward.svg" alt="Volver" />
-      </button>
     </div>
   </body>
 </html>
